Added horimargin to footer

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -109,6 +109,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    margin: 0 15px;
 }
 
 .whiteicon {
